tests/kulezi_tests/bad/not_an_array.lat
int main() {
    int x;
    for (int a : x) {
    }

    return 0;
}